# Wisp

./: .gitignore  NPM_PUBLISH.txt  README.ko.md  README.md  README.zh-CN.md  RELEASE.md  RELEASING.md  build.ps1  build.sh  package.json
.github/workflows/: ci.yml  release.yml
.wisp/: instructions.md  settings.toml
docs/: index.html
npm/: LICENSE  README.md  package.json
npm/scripts/: build.js  postinstall.js
wisp/: Cargo.toml
wisp/.cargo/: config.toml
wisp/src/: agent.rs  cli.rs  config.rs  display.rs  error.rs  git.rs  input.rs  instructions.rs  language.rs  main.rs  policy.rs  session.rs  settings.rs  tui.rs  update.rs  workflow.rs
