[package]
name = "wisp"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "wisp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
chrono = "0.4"
ureq = { version = "2", default-features = false, features = ["rustls", "json"] }
serde_json = "1"
