[package]
name = "wisp"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "wisp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
chrono = "0.4"
ureq = { version = "2", features = ["json"] }
native-tls = { version = "0.2", features = ["vendored"] }
serde_json = "1"
